--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.0",
     "mysql": "^2.18.1",
-    "mysql2": "^3.0.1"
+    "mysql2": "^3.0.1",
+    "redis": "^4.6.1"
   }
 }
